--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,8 +1,17 @@
 .container {
     margin-left: auto;
     margin-right: auto;
-    width: 1200px;
     padding: 0 15px;
+
+    @media screen and (min-width: $mobile){
+      width: 480px;
+    }
+    @media screen and (min-width: $tablet){
+      width: 768px;
+    }
+    @media screen and (min-width: $desktop){
+      width: 1200px;
+    }
   }
 
   .visually-hidden {
