--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,12 +1,24 @@
 .clients {
+  @media screen and (max-width:1199px){
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  @media screen and (min-width:1200px){
     padding-top: 94px;
     padding-bottom: 94px;
+  }
   }
 
 //   .services .title,
 //   .team .title,
   .clients-title {
-    @extend %section-title;
+    @media screen and (max-width:1199px){
+       margin-bottom: 30px;
+       font-size: 28px;
+    }
+    // @media screen and (min-width:1200px){}
+      @extend %section-title;
+    
     // margin-bottom: 50px;
   
     // color: $title-text-color;
@@ -19,16 +31,77 @@
   
   .clients-list {
     display: flex;
+    @media screen and (max-width:1199px){
+    flex-wrap: wrap;
+  }
+  @media screen and (min-width:1200px){
+    flex-wrap: nowrap;
+  }
+  }
+  // .clients-item{
+  //   @media screen and (max-width:767px){
+  //     // width: calc((100%-30px)/2);
+  //     width: 210px;
+  //     height: 90px;
+  //   }
+  //   @media screen and (min-width:768px){
+  //   // width: calc((100%-30px*2)/3);
+  //   width: 226px;
+  //   height: 90px;
+  //   }
+  //   @media screen and (min-width:1200px){
+  //     // width: calc((100%-30px*5)/6);
+  //   width: 170px;
+  //   height: 90px;
+  //     }
+  // }
+
+  
+    @media screen and (max-width:767px){
+      .clients-item:nth-child(2n+1){
+      margin-right: 30px;
+    }
+    .clients-item:nth-child(-n+4){
+      margin-bottom: 30px;
+    }
   }
   
-  .clients-item:not(:last-child) {
+  @media screen and (min-width:768px){
+    .clients-item:not(:nth-child(3n)){
     margin-right: 30px;
+  }
+  .clients-item:nth-child(-n+3){
+    margin-bottom: 30px;
+  }
+}
+    @media screen and (min-width:1200px){
+      .clients-item{
+        margin-bottom: 30px;
+      }
+      .clients-item:not(:last-child) {
+      margin-right: 30px;
+    }
   }
   
   .clients-link {
-    display: flex;
+    @media screen and (max-width:767px){
+      // width: calc((100% -30px) / 2);
+      width: 210px;
+      height: 90px;
+    }
+    @media screen and (min-width:768px){
+    // width: calc((100%-30px*2)/3);
+    width: 226px;
+    height: 90px;
+    }
+    @media screen and (min-width:1200px){
+      // width: calc((100%-30px*5)/6);
     width: 170px;
     height: 90px;
+      }
+    display: flex;
+    // width: 170px;
+    // height: 90px;
     border: 1px solid $icon-color;
     border-radius: 4px;
     justify-content: center;
