--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,113 +1,338 @@
+header{
+  position: relative;
+}
+
 .header.container {
     display: flex;
     align-items: center;
-  }
-
-.portfolio-header {
-    border-bottom: 1px solid #ececec;
-  
-    transition-property: border;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
-    &:focus, &:hover{
-        border-bottom: 1px solid $accent-color;
+    min-height: 60px;
+    // @media screen and (max-width: 767px){
+    //   position: fixed;
+    //   top: 0;
+    //   min-height: 60px;
+    // }
+    @media screen and (min-width: 768px){
+      min-height: 80px;
     }
   }
 
-nav {
-    display: flex;
+.menu-button {
+  display: inline-flex;
+  margin-right: 0px;
+  margin-left: auto;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  @media screen and (min-width: 768px){
+    display: none;
+  }
+  }
+  
+  .menu-button .icon-mobile-close{
+    display: none;
+  }
+  
+  .menu-button.is-open .icon-mobile-close{
+    display: block;
+  }
+  
+  .menu-button.is-open .icon-menu{
+    display: none;
+  }
+  
+  .icon-menu, .icon-mobile-close{
+    fill: $title-text-color;
+  
+    transition-property: fill;
+    transition-duration: 2500ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus{
+      fill: $accent-color;
+    }
   }
 
-.nav-list {
-    display: flex;
+  .menu-container{
+    @media screen and (max-width: 767px){
+    background-color: #fff;
+    padding: 60px;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
+
+    display: none;
+    position: absolute;
+    height: 400px;
+    top: 100%;
+    left: 0;
+    width: 100%;
+
+      &.is-open{
+          display: block; 
+        }  
+      }
+    
+    @media screen and (min-width:768px){
+      display: flex; 
+      align-items: center;
+    }  
   }
 
-.nav-list-item:not(:last-child),
-.contacts-list-item:not(:last-child) {
-  margin-right: 50px;
+
+.nav-list{
+  @media screen and (max-width: 767px){
+    margin-bottom: 60px;
+  }
+  @media screen and (min-width: 768px){
+    display: flex;
+    align-items: center;
+  }
 }
 
-.nav-list-link,
-.contacts-list-link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-}
+.nav-list-item:not(:last-child) {
+  @media screen and (max-width: 767px){
+    margin-bottom: 40px;
+  }
+  @media screen and (min-width: 768px){
+    margin-right: 50px;
+  }
+ }
 
-.nav-list-link{
-    position: relative;
+ .nav-list-link.current {
+  @media screen and (max-width: 767px){
+    margin-bottom: 12px;
+  }
+ }
+
+.nav-list-link {
+  // display: inline-block;
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+
+
+  position: relative;
   
     color: $title-text-color;
     font-size: 14px;
     font-weight: 500;
     letter-spacing: 0.02em;
-    line-height: 1, 14;
-    text-transform: capitalize;
+    line-height: 1.14;
   
     transition-property: color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  
   &:hover,
   &:focus,
-  & .current{
+  &.current{
     color: $accent-color;
   }
 }
 .current::after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 4px;
-    background: $accent-color;
-    border-radius: 2px;
-  
-    position: absolute;
-    bottom: 0;
-  }
-  
-  
-  .contacts-list {
-    display: flex;
-    margin-left: auto;
-  }
+      content: '';
+      display: block;
+      width: 100%;
+      height: 4px;
+      background: $accent-color;
+      border-radius: 2px;
+    
+      position: absolute;
+      @media screen and (min-width: 768px){
+        bottom: -12px;
+      }
+      @media screen and (min-width: 768px){
+        bottom: -32px;
+      }
+    }
 
-  .contacts-list-link {
-    display: flex;
-  
-    color: $primary-text-color;
-    font-size: 14px;
-    font-weight: 500;
-    line-height: 1, 14;
-    letter-spacing: 0.02em;
-    justify-content: space-between;
-    align-items: center;
-  
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+.contacts-list{
+  @media screen and (min-width: 768px){
+    margin-left: 84px;
+  }
+  @media screen and (min-width: 1200px){
+  //   margin-right: 0;
+  margin-left: 305px;
+  display: flex;
+  }
+}
+
+.contacts-list-item:not(:last-child) {
+  @media screen and (max-width: 767px){
+    margin-bottom: 16px;
+  }
+  @media screen and (min-width: 768px) and (max-width: 1200px){
+    margin-bottom: 10px;
+  }
+  @media screen and (min-width: 1200px){
+    margin-right: 30px;
+  }
+}
+
+.contacts-list-link {
+  @media screen and (max-width: 767px){
+  justify-content: center;
+  }
+  @media screen and (max-width: 1199px){
+    font-size: 12px;
+    }
+  @media screen and (min-width: 1200px){
+  padding-top: 32px;
+  padding-bottom: 32px;
+  justify-content: space-between;
+  }
+  display: flex;
+  color: $primary-text-color;
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+ 
+  align-items: center;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
   color: $accent-color;
 }
 }
+
 .icon-envelope {
-    width: 16px;
-    height: 12px;
-    margin-right: 10px;
+      width: 16px;
+      height: 12px;
+      margin-right: 10px;
+    
+      fill: currentColor;
+    }
+    
+.icon-smartphone {
+      width: 10px;
+      height: 16px;
+      margin-right: 10px;
+    
+      fill: currentColor;
+    }
+
+
+
+
+
+
+
+
+// .header.container {
+//     display: flex;
+//     align-items: center;
+//   }
+
+// .portfolio-header {
+//     border-bottom: 1px solid #ececec;
   
-    fill: currentColor;
-  }
+//     transition-property: border;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:focus, &:hover{
+//         border-bottom: 1px solid $accent-color;
+//     }
+//   }
+
+// nav {
+//     display: flex;
+//   }
+
+// .nav-list {
+//     display: flex;
+//   }
+
+// .nav-list-item:not(:last-child),
+// .contacts-list-item:not(:last-child) {
+//   margin-right: 50px;
+// }
+
+// .nav-list-link,
+// .contacts-list-link {
+//   display: block;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+// }
+
+// .nav-list-link{
+//     position: relative;
   
-  .icon-smartphone {
-    width: 10px;
-    height: 16px;
-    margin-right: 10px;
+//     color: $title-text-color;
+//     font-size: 14px;
+//     font-weight: 500;
+//     letter-spacing: 0.02em;
+//     line-height: 1, 14;
+//     text-transform: capitalize;
   
-    fill: currentColor;
-  }
+//     transition-property: color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+//   &:hover,
+//   &:focus,
+//   &.current{
+//     color: $accent-color;
+//   }
+// }
+// .current::after {
+//     content: '';
+//     display: block;
+//     width: 100%;
+//     height: 4px;
+//     background: $accent-color;
+//     border-radius: 2px;
+  
+//     position: absolute;
+//     bottom: 0;
+//   }
+  
+  
+//   .contacts-list {
+//     display: flex;
+//     margin-left: auto;
+//   }
+
+//   .contacts-list-link {
+//     display: flex;
+  
+//     color: $primary-text-color;
+//     font-size: 14px;
+//     font-weight: 500;
+//     line-height: 1, 14;
+//     letter-spacing: 0.02em;
+//     justify-content: space-between;
+//     align-items: center;
+  
+//     transition-property: color;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+//     &:hover,
+//     &:focus {
+//   color: $accent-color;
+// }
+// }
+// .icon-envelope {
+//     width: 16px;
+//     height: 12px;
+//     margin-right: 10px;
+  
+//     fill: currentColor;
+//   }
+  
+//   .icon-smartphone {
+//     width: 10px;
+//     height: 16px;
+//     margin-right: 10px;
+  
+//     fill: currentColor;
+//   }
 
   
 
