--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -7,6 +7,8 @@
   
     background-color: rgba(0, 0, 0, 0.2);
     opacity: 1;
+
+    // overflow-y: scroll;
   
     transition-property: opacity;
     transition-duration: 250ms;
