--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import "./utils/variabels";
 @import "./utils/normolize";
 @import "./utils/placeholders";
+@import "./utils/breakpoints";
 @import "./utils/fonts";
 
 @import "./base/common";
