--- a/css/main.css
+++ b/css/main.css
@@ -496,7 +496,6 @@ header {
     background-color: #fff;
     padding: 60px;
     text-align: center;
-    font-size: 18px;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.04), 0px 2px 4px rgba(0, 0, 0, 0.08), 0px 1px 3px rgba(0, 0, 0, 0.16);
     display: none;
     position: absolute;
@@ -543,15 +542,16 @@ header {
 }
 
 @media screen and (max-width: 767px) {
-  .nav-list-link.current {
-    margin-bottom: 12px;
+  .nav-list-item.current {
+    margin-bottom: 52px;
   }
 }
 
 .nav-list-link {
   position: relative;
+  display: inline-block;
   color: #212121;
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 500;
   letter-spacing: 0.02em;
   line-height: 1.14;
@@ -564,24 +564,30 @@ header {
   color: #2196f3;
 }
 
-.current::after {
+@media screen and (min-width: 768px) {
+  .nav-list-link {
+    font-size: 14px;
+  }
+}
+
+.nav-list-link.current::after {
+  position: absolute;
   content: '';
   display: block;
   width: 100%;
   height: 4px;
   background: #2196f3;
   border-radius: 2px;
-  position: absolute;
 }
 
-@media screen and (min-width: 768px) {
-  .current::after {
+@media screen and (max-width: 767px) {
+  .nav-list-link.current::after {
     bottom: -12px;
   }
 }
 
 @media screen and (min-width: 768px) {
-  .current::after {
+  .nav-list-link.current::after {
     bottom: -32px;
   }
 }
@@ -620,14 +626,18 @@ header {
 .contacts-list-link {
   display: flex;
   color: #757575;
-  font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   align-items: center;
+  font-size: 18px;
   transition-property: color;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-list-link:hover, .contacts-list-link:focus {
+  color: #2196f3;
 }
 
 @media screen and (max-width: 767px) {
@@ -636,7 +646,7 @@ header {
   }
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .contacts-list-link {
     font-size: 12px;
   }
@@ -647,11 +657,8 @@ header {
     padding-top: 32px;
     padding-bottom: 32px;
     justify-content: space-between;
+    font-size: 14px;
   }
-}
-
-.contacts-list-link:hover, .contacts-list-link:focus {
-  color: #2196f3;
 }
 
 .icon-envelope {
@@ -725,6 +732,7 @@ header {
   background-color: #2f303a;
   height: 400px;
   max-width: 480px;
+  background-position: center;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile-opt@1x.jpg);
 }
 
@@ -796,7 +804,7 @@ header {
   padding-bottom: 60px;
 }
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1200px) {
   .features {
     padding-top: 94px;
     padding-bottom: 94px;
@@ -1215,13 +1223,25 @@ header {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 528px;
-  height: 581px;
   padding: 40px;
   background-color: #ffffff;
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+  }
 }
 
 .buton-modal-close {
@@ -1334,7 +1354,13 @@ header {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-  width: 425px;
+  width: 370px;
+}
+
+@media screen and (min-width: 1199px) {
+  .agreement-field {
+    width: 425px;
+  }
 }
 
 .checkbox {
@@ -1352,7 +1378,7 @@ header {
   display: flex;
   align-items: center;
   font-weight: 400;
-  font-size: 14px;
+  font-size: 12px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
@@ -1369,6 +1395,12 @@ header {
   transition-property: background-image;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 1199px) {
+  .agreement-label {
+    font-size: 14px;
+  }
 }
 
 .checkbox:checked + .agreement-label::before {
@@ -1568,18 +1600,18 @@ header {
   border-radius: 4px;
   background-color: transparent;
   color: #ffffff;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (min-width: 480px) {
   .subscription-input {
-    margin-bottom: 20px;
     min-width: 450px;
   }
 }
 
 @media screen and (min-width: 768px) {
   .subscription-input {
-    margin-bottom: 20px;
     min-width: 450px;
   }
 }
@@ -1610,39 +1642,92 @@ header {
 }
 
 .our-works {
-  padding: 94px 0;
+  padding: 60px 0;
   margin: 0px;
+}
+
+@media screen and (min-width: 1200px) {
+  .our-works {
+    padding: 94px 0;
+  }
 }
 
 .filter {
   display: flex;
-  margin-bottom: 50px;
-  justify-content: center;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    flex-wrap: nowrap;
+    justify-content: center;
+    margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .filter {
+    margin-bottom: 50px;
+  }
 }
 
 .filter-item:not(:last-child) {
-  margin-right: 9px;
+  margin-right: 8px;
+  margin-bottom: 15px;
 }
 
-.gallery-list {
-  display: flex;
-  flex-wrap: wrap;
+@media screen and (min-width: 1199px) {
+  .filter-item:not(:last-child) {
+    margin-right: 9px;
+    margin-bottom: 0;
+  }
 }
 
-.gallery-list-item {
-  width: 370px;
+@media screen and (min-width: 768px) {
+  .gallery-list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
-.gallery-list-item:not(:nth-child(3n)) {
-  margin-right: 30px;
-}
-
-.gallery-list-item:not(:nth-last-child(-n + 3)) {
+.gallery-list-item:not(:last-child) {
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 480px) {
+  .gallery-list-item {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .gallery-list-item {
+    width: 354px;
+  }
+  .gallery-list-item:nth-child(-n+8) {
+    margin-bottom: 30px;
+  }
+  .gallery-list-item:nth-child(2n+1) {
+    margin-right: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery-list-item {
+    width: 370px;
+  }
+  .gallery-list-item:not(:nth-child(3n)) {
+    margin-right: 30px;
+  }
+  .gallery-list-item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+  }
+}
+
 .gallery-list-link {
-  display: inline-block;
+  display: block;
   margin-top: 0px;
   margin-bottom: 0px;
   transition-property: box-shadow;
@@ -1659,6 +1744,28 @@ header {
   overflow: hidden;
 }
 
+.gallery-backdrop-image {
+  width: 100%;
+}
+
+@media screen and (min-width: 480px) {
+  .gallery-backdrop-image {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-backdrop-image {
+    width: 354px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery-backdrop-image {
+    width: 370px;
+  }
+}
+
 .gallery-overlay {
   opacity: 0;
   position: absolute;
@@ -1666,7 +1773,7 @@ header {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 63px 24px;
+  padding: 77px 24px;
   background: rgba(33, 150, 243, 0.9);
   font-weight: 400;
   font-size: 18px;
@@ -1677,6 +1784,18 @@ header {
   transition-property: opacity translatey;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .gallery-overlay {
+    padding: 49px 24px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery-overlay {
+    padding: 63px 24px;
+  }
 }
 
 .gallery-list-link:hover .gallery-overlay,
