--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -166,12 +166,13 @@
     border-radius: 4px;
     background-color: transparent;
     color: $accent-color-2;
-    @media screen and (max-width: 767px){
-      margin-bottom: 20px;
+    margin-bottom: 20px;
+    width: 100%;
+    @media screen and (min-width: 480px){
       min-width: 450px;
     }
     @media screen and (min-width: 768px){
-      margin-bottom: 20px;
+      // margin-bottom: 20px;
       min-width: 450px;
     }
     @media screen and (min-width: 1200px){
