--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,9 +3,11 @@
     padding-bottom: 118px;
     padding-top: 118px;
     text-align: center;
+
     // @media screen and (max-width: 767px){
     //   margin-top: 60px;
     // }
+
   @media screen and (min-width: 1200px){
     padding-bottom: 200px;
     padding-top: 200px;
@@ -19,6 +21,7 @@
 
   height: 400px;
   max-width: 480px;
+  background-position: center;
   background-image: linear-gradient(
       to right,
       rgba(47, 48, 58, 0.4),
