--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,6 +1,7 @@
 .logo {
   @media screen and (max-width: 1199px){
     margin-right: 88px;
+    // margin-right: auto;
     font-size: 24px;
   }
   @media screen and (min-width: 1200px){
