--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -1,17 +1,36 @@
 
 .our-works {
-    padding: 94px 0;
+    padding: 60px 0;
     margin: 0px;
+    @media screen and (min-width: 1200px){
+      padding: 94px 0;
+    }
   }
   
   .filter {
     display: flex;
-    margin-bottom: 50px;
-    justify-content: center;
+    flex-wrap: wrap;
+    justify-content: start;
+    margin-bottom: 40px;
+    @media screen and (min-width: 768px){
+      flex-wrap: nowrap;
+      justify-content: center;
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 1199px){
+      margin-bottom: 50px;
+    }
+   
   }
   
   .filter-item:not(:last-child) {
-    margin-right: 9px;
+    margin-right: 8px;
+    margin-bottom: 15px;
+    @media screen and (min-width: 1199px){
+      margin-right: 9px;
+      margin-bottom: 0;
+    }
+  
   }
 
 //   .filter-button {
@@ -46,22 +65,43 @@
 
   
   .gallery-list{
+    @media screen and (min-width: 768px){
     display: flex;
     flex-wrap: wrap;
   }
+  }
   
   .gallery-list-item {
-    width: 370px;
-    &:not(:nth-child(3n)) {
-        margin-right: 30px;
-      }
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+    @media screen and (min-width: 480px){
+      width: 450px;
+    }
+     
+    @media screen and (min-width: 768px)and (max-width: 1199px){
+    width: 354px;
+    &:nth-child(-n+8) {
+      margin-bottom: 30px;
+    }
+    &:nth-child(2n+1) {
+      margin-right: 30px;
+    }
+    }
+    @media screen and (min-width: 1200px){
+      width: 370px;
+      &:not(:nth-child(3n)) {
+          margin-right: 30px;
+        }
       &:not(:nth-last-child(-n + 3)) {
-        margin-bottom: 30px;
+          margin-bottom: 30px;
+        }
       }
   }
   
   .gallery-list-link {
-    display: inline-block;
+    // display: inline-block;
+    display: block;
     margin-top: 0px;
     margin-bottom: 0px;
   
@@ -80,6 +120,19 @@
     overflow: hidden;
   }
   
+  .gallery-backdrop-image{
+  width: 100%;  
+    @media screen and (min-width: 480px){
+      width: 450px;
+    }
+    @media screen and (min-width: 768px){
+        width: 354px;
+    }
+    @media screen and (min-width: 1200px){
+    width: 370px;
+    }
+  }
+
   .gallery-overlay {
     opacity: 0;
     position: absolute;
@@ -87,7 +140,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 63px 24px;
+    padding: 77px 24px;
   
     background: rgba(33, 150, 243, 0.9);
     font-weight: 400;
@@ -102,7 +155,16 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    .gallery-list-link:hover &,
+    @media screen and (min-width: 768px){
+      padding: 49px 24px;
+    }
+   
+    @media screen and (min-width: 1200px){
+      padding: 63px 24px;
+    }
+   
+
+  .gallery-list-link:hover &,
   .gallery-list-link:focus &{
     opacity: 1;
   
@@ -140,6 +202,175 @@
   }
   
   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//   .our-works {
+//     padding: 94px 0;
+//     margin: 0px;
+//   }
+  
+//   .filter {
+//     display: flex;
+//     margin-bottom: 50px;
+//     justify-content: center;
+//   }
+  
+//   .filter-item:not(:last-child) {
+//     margin-right: 9px;
+//   }
+
+// //   .filter-button {
+// //     display: inline-block;
+// //     border: 1px solid transparent;
+// //     border-radius: 4px;
+// //     color: $title-text-color;
+// //     background-color: $background-color-2;
+// //     text-align: center;
+
+// //     height: 38px;
+// //     padding: 6px 22px;
+   
+// //     font-weight: 500;
+// //     font-size: 16px;
+// //     line-height: 1.62;
+// //     letter-spacing: 0.03em;
+
+
+// //     transition-property: color, background-color;
+// //     transition-duration: 250ms;
+// //     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  
+// //   &:hover,
+// //   &:focus {
+// //     color: $accent-color-2;
+// //     background-color: $accent-color;
+// //     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+// //       0px 2px 2px rgba(0, 0, 0, 0.12);
+// //   }
+// // }
+
+  
+//   .gallery-list{
+//     display: flex;
+//     flex-wrap: wrap;
+//   }
+  
+//   .gallery-list-item {
+//     width: 370px;
+//     &:not(:nth-child(3n)) {
+//         margin-right: 30px;
+//       }
+//       &:not(:nth-last-child(-n + 3)) {
+//         margin-bottom: 30px;
+//       }
+//   }
+  
+//   .gallery-list-link {
+//     display: inline-block;
+//     margin-top: 0px;
+//     margin-bottom: 0px;
+  
+//     transition-property: box-shadow;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//     &:hover,
+//     &:focus {
+//     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+//       1px 4px 6px rgba(0, 0, 0, 0.16);
+//   }
+//   }
+
+//   .gallery-backdrop {
+//     position: relative;
+//     overflow: hidden;
+//   }
+  
+//   .gallery-overlay {
+//     opacity: 0;
+//     position: absolute;
+//     bottom: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     padding: 63px 24px;
+  
+//     background: rgba(33, 150, 243, 0.9);
+//     font-weight: 400;
+//     font-size: 18px;
+//     line-height: 1.56;
+//     letter-spacing: 0.03em;
+//     color: $accent-color-2;
+  
+//     transform: translatey(100%);
+  
+//     transition-property: opacity translatey;
+//     transition-duration: 250ms;
+//     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+//     .gallery-list-link:hover &,
+//   .gallery-list-link:focus &{
+//     opacity: 1;
+  
+//     transform: translatey(0%);
+//   }
+//   }
+
+//   .card-content {
+//     padding-top: 20px;
+//     padding-bottom: 20px;
+//     padding-left: 24px;
+//     padding-right: 24px;
+//     background: #ffffff;
+//     border-left: 1px solid #eeeeee;
+//     border-right: 1px solid #eeeeee;
+//     border-bottom: 1px solid #eeeeee;
+//   }
+
+
+//   .gallery-title {
+//     margin-bottom: 4px;
+  
+//     color: $title-text-color;
+//     font-weight: 700;
+//     font-size: 18px;
+//     line-height: 2;
+//     letter-spacing: 0.06em;
+//   }
+  
+//   .gallery-work {
+//     color: $primary-text-color;
+//     font-size: 16px;
+//     line-height: 1.87;
+//     letter-spacing: 0.03em;
+//   }
   
   
   
