--- a/css/main.css
+++ b/css/main.css
@@ -373,24 +373,6 @@ summary {
   padding: 0 15px;
 }
 
-@media screen and (min-width: 480px) {
-  .container {
-    width: 480px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
-
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -445,6 +427,18 @@ header {
   min-height: 60px;
 }
 
+@media screen and (max-width: 767px) {
+  .header.container {
+    position: fixed;
+    z-index: 10;
+    width: 100%;
+    top: 0;
+    left: 0;
+    justify-content: space-between;
+    background-color: #fff;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .header.container {
     min-height: 80px;
@@ -483,7 +477,7 @@ header {
 .icon-menu, .icon-mobile-close {
   fill: #212121;
   transition-property: fill;
-  transition-duration: 2500ms;
+  transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -676,6 +670,7 @@ header {
 }
 
 .logo {
+  font-size: 24px;
   color: #2196f3;
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -683,10 +678,9 @@ header {
   line-height: 1.19;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 768px) {
   .logo {
     margin-right: 88px;
-    font-size: 24px;
   }
 }
 
@@ -719,6 +713,12 @@ header {
   text-align: center;
 }
 
+@media screen and (max-width: 767px) {
+  .hero {
+    margin-top: 60px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .hero {
     padding-bottom: 200px;
@@ -734,11 +734,12 @@ header {
   max-width: 480px;
   background-position: center;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile-opt@1x.jpg);
+  background-size: cover;
 }
 
-@media (min-resolution: 2dppx) {
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
   .overlay {
-    background-image: url(../images/hero-mobile-opt@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-mobile-opt@2x.jpg);
   }
 }
 
@@ -750,9 +751,9 @@ header {
   }
 }
 
-@media screen and (min-width: 480px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .overlay {
-    background-image: url(../images/hero-tablet-opt@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-tablet-opt@2x.jpg);
   }
 }
 
@@ -761,13 +762,12 @@ header {
     height: 400px;
     max-width: 1600px;
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-desktop-opt@1x.jpg);
-    background-size: cover;
   }
 }
 
-@media screen and (min-width: 768px) and (min-resolution: 2dppx) {
+@media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .overlay {
-    background-image: url(../images/hero-desktop-opt@2x.jpg);
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-desktop-opt@2x.jpg);
   }
 }
 
@@ -1055,6 +1055,29 @@ header {
   }
 }
 
+.clients-item {
+  width: calc((100% - 30px) / 2);
+  height: 90px;
+}
+
+@media screen and (min-width: 480px) {
+  .clients-item {
+    width: 210px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .clients-item {
+    width: 226px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients-item {
+    width: 170px;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .clients-item:nth-child(2n+1) {
     margin-right: 30px;
@@ -1084,6 +1107,8 @@ header {
 
 .clients-link {
   display: flex;
+  width: 100%;
+  height: 100%;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   justify-content: center;
@@ -1092,27 +1117,6 @@ header {
   transition-property: color, border;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@media screen and (max-width: 767px) {
-  .clients-link {
-    width: 210px;
-    height: 90px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .clients-link {
-    width: 226px;
-    height: 90px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .clients-link {
-    width: 170px;
-    height: 90px;
-  }
 }
 
 .clients-link:hover, .clients-link:focus {
@@ -1228,9 +1232,11 @@ header {
   transition-property: transform;
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  max-height: 609px;
 }
 
-@media screen and (max-width: 1199px) {
+@media screen and (min-width: 480px) {
   .modal {
     width: 450px;
     height: 609px;
