--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -3,15 +3,15 @@
     margin-right: auto;
     padding: 0 15px;
 
-    @media screen and (min-width: $mobile){
-      width: 480px;
-    }
-    @media screen and (min-width: $tablet){
-      width: 768px;
-    }
-    @media screen and (min-width: $desktop){
-      width: 1200px;
-    }
+    // @media screen and (min-width: $mobile){
+    //   width: 480px;
+    // }
+    // @media screen and (min-width: $tablet){
+    //   width: 768px;
+    // }
+    // @media screen and (min-width: $desktop){
+    //   width: 1200px;
+    // }
   }
 
   .visually-hidden {
