--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,12 +10,16 @@ header{
 
     min-height: 60px;
 
-    // @media screen and (max-width: 767px){
-    //   position: fixed;
-     
-    //   top: 0;
-    //   left: calc((100% - 480px)/2); 
-    // }
+    @media screen and (max-width: 767px){
+      position: fixed;
+      z-index: 10;
+      width: 100%;
+      top: 0;
+      left: 0;
+      justify-content: space-between;
+      background-color: #fff;
+
+    }
 
     @media screen and (min-width: 768px){
       min-height: 80px;
@@ -52,7 +56,7 @@ header{
     fill: $title-text-color;
   
     transition-property: fill;
-    transition-duration: 2500ms;
+    transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     &:hover,
     &:focus{
