--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -4,9 +4,9 @@
     padding-top: 118px;
     text-align: center;
 
-    // @media screen and (max-width: 767px){
-    //   margin-top: 60px;
-    // }
+    @media screen and (max-width: 767px){
+      margin-top: 60px;
+    }
 
   @media screen and (min-width: 1200px){
     padding-bottom: 200px;
@@ -28,23 +28,38 @@
       rgba(47, 48, 58, 0.4)
     ),
     url(../images/hero-mobile-opt@1x.jpg);
+    background-size: cover;
 
-      @media (min-resolution:2dppx){
-        background-image:url(../images/hero-mobile-opt@2x.jpg);
+      @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+        background-image:linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),url(../images/hero-mobile-opt@2x.jpg);
       }
 
   @media screen and (min-width: 480px){
     height: 400px;
     max-width: 768px;
-    background-image: linear-gradient(
+    background-image: 
+    linear-gradient(
         to right,
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-tablet-opt@1x.jpg);
-
-      @media (min-resolution:2dppx){
-        background-image:url(../images/hero-tablet-opt@2x.jpg);
+     
+      @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+        background-image:linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-tablet-opt@2x.jpg);
       }
   }
   @media screen and (min-width: 768px){
@@ -56,12 +71,19 @@
         rgba(47, 48, 58, 0.4)
       ),
       url(../images/hero-desktop-opt@1x.jpg);
-      background-size: cover;
-      @media (min-resolution:2dppx){
-        background-image:url(../images/hero-desktop-opt@2x.jpg);
+     
+      @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+        background-image:linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.4),
+          rgba(47, 48, 58, 0.4)
+        ),
+        url(../images/hero-desktop-opt@2x.jpg);
       }
     }
-      @media screen and (min-width: 1200px){
+  @media screen and (min-width: 1200px){
         height: 600px;
         max-width: 1600px; 
        }
