--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,9 +1,10 @@
 .logo {
-  @media screen and (max-width: 1199px){
+  font-size: 24px;
+
+  @media screen and (min-width: 768px){
     margin-right: 88px;
-    // margin-right: auto;
-    font-size: 24px;
   }
+
   @media screen and (min-width: 1200px){
     margin-right: 93px;
     font-size: 26px;
