--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -38,7 +38,9 @@
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
-    @media screen and (max-width: 1199px){
+    width: 100%;
+    max-height: 609px;
+    @media screen and (min-width: 480px){
       width: 450px;
       height: 609px;
     }
